Fix long words overflow and not wrapping

--- a/app/static/css/blog.css
+++ b/app/static/css/blog.css
@@ -32,6 +32,8 @@
 
 .post-desc {
     grid-area: desc;
+    overflow-wrap: break-word;
+    width: 100%;
     color: var(--dark-gray);
     margin: 0;
 }
